fix overflow

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -23,13 +23,14 @@ html {
   font-size: 14px;
   font-weight: 400;
   line-height: 1.6em;
+  overflow-x: hidden;
+  max-width: 100vw;
+
 }
 
 body {
   box-sizing: border-box;
-  max-width: 100vw;
   height: max-content;
-  overflow-x: hidden;
   overflow-y: scroll;
   margin: 0;
   padding: 0;
@@ -161,6 +162,8 @@ ul.gradient-items-list li span:first-of-type {
   font-size: 4.5rem;
   line-height: 6rem;
   font-weight: 900;
+
+  display: flex;
 }
 
 ul.gradient-items-list li span:first-of-type img {
